==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.1.5 Dec 04 2014
. (kfsone) Startup optimizations,
. (kfsone) "update" command now always exposes supply and demand,
. (kfsone) "--supply" (-S) is now deprecated for "update" command,

v6.1.4 Dec 01 2014
. (kfsone) "updated.prices" will now contain line removals
. (kfsone) 155 new systems from RedWizard
. (Eggplant!) More Stations
. (kfsone) Fix miscount of jumps when same-system hops were in a route,
. (kfsone) run --jumps=0 now limits to same-system options
. (kfsone) Fixed empty "Jump" lines in nav output for same-system hop

v6.1.3 Nov 30 2014
. (gazelle) More Station and Ship data
. (kfsone) Changed UPDATE command to use places, check for stations, and to
  generate a complete .prices fragment with timestamps for maddavo compat.
. (kfsone) Fixed "run" and "nav" not understanding stations correctly
. (kfsone) "avoid" now handles systems/stations discretely
  - avoiding a station means you won't land there but you can
    pass through the system,
  - avoiding a system means you won't land there or fly thru it,
. (kfsone) Improvements to name disambiguation:
  When specifying a "place" name (system or station) you can resolve
  any ambiguities with a new syntax:
    @name
      Means "this is a system name, don't conflict with stations"
    /name or @/name
      Means "this is a station, don't conflict with systems"
    name/name  or  @name/name
      Means "this is a system name and a station name"
. (kfsone) Improved matching algorithm

To see the difference, try:

  trade.py local --ly 5 bea
  trade.py local --ly 5 @bea
  trade.py local --ly 5 @/bea
  trade.py local --ly 5 prim/bea


v6.1.2 Nov 28 2014
. (kfsone) GUI now saves its updates as "updated.prices" so you can upload them